# helloworlddjango

./: db.sqlite3  pyproject.toml
hello_django/: settings.py  urls.py
