[tool.poetry]
name = "hello_django"
version = "0.1.0"
description = "A Django application that prints \"hello, world\""
authors = ["Paul <paulieracisz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
